[gd_scene load_steps=4 format=2]

[ext_resource path="res://storyline/SkipDialog.gd" type="Script" id=2]
[ext_resource path="res://storyline/StoryBox.gd" type="Script" id=3]
[ext_resource path="res://storyline/ChatBox.gd" type="Script" id=4]

[node name="StoryBox" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -96.0
margin_bottom = -78.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 136.0
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextDialog" type="Button" parent="."]
margin_left = 32.0
margin_top = 152.0
margin_right = 112.0
margin_bottom = 176.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipDialog" type="Button" parent="."]
margin_left = 144.0
margin_top = 152.0
margin_right = 224.0
margin_bottom = 176.0
text = "Next Level"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Person" type="Sprite" parent="."]
position = Vector2( 312, 80 )
scale = Vector2( 2, 2 )
vframes = 4
hframes = 3

[node name="PersonName" type="Label" parent="."]
margin_left = 256.0
margin_top = 112.0
margin_right = 368.0
margin_bottom = 144.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextDialog" to="ChatBox" method="_on_NextDialog_pressed"]
